[tool.poetry]
name = "need4approval"
version = "0.1.0"
description = ""
authors = ["Adrian Sampson <adrian@radbox.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
"Mastodon.py" = "^1.5.1"
sparklines = "^0.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
n4a = "need4approval:n4a"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
