[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "need4approval"
authors = [{name = "Adrian Sampson", email = "adrian@radbox.org"}]
license = "MIT"
requires-python = ">=3.6"
dynamic = ["version", "description"]

dependencies = [
    "Mastodon.py >=1.5.1",
    "sparklines >= 0.4.2",
]

[project.scripts]
n4a = "need4approval:n4a"
